--- a/01_profile.html
+++ b/01_profile.html
@@ -48,7 +48,7 @@
                 data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         </div>
-        <a class="navbar-brand mr-lg-5" href="../../00_index.html">
+        <a class="navbar-brand mr-lg-5" href="../../index.html">
             <img class="navbar-brand-dark" src="images/gotcha-logo.png" alt="Pixel logo">
             <img class="navbar-brand-light" src="../../assets/img/brand/dark.svg" alt="Pixel Logo Dark">
         </a>
@@ -60,7 +60,7 @@
                 <nav id="sidebarMenu" class="sidebar d-md-block  collapse  bg-white">
                     <div class="sidebar-sticky ">
                         <div class="bg-primary px-4">
-                            <a class="navbar-brand @@logo_classes" href="00_index.html">
+                            <a class="navbar-brand @@logo_classes" href="index.html">
                                 <div class="d-flex align-items-center">
                                     <img class="navbar-brand-dark rotate-logo" src="images/gotcha-logo.png"
                                         alt="Logo light">
@@ -128,7 +128,7 @@
                                 <li class="nav-item"><a href="03_setting.html" class="nav-link"><span
                                             class="sidebar-icon"><span class="fas fa-cog"></span></span>
                                         <span>帳號設定</span></a></li>
-                                <li class="nav-item"><a href="00_index.html" class="nav-link"><span
+                                <li class="nav-item"><a href="index.html" class="nav-link"><span
                                             class="sidebar-icon"><span
                                                 class="fa-solid fa-arrow-right-from-bracket"></span></span>
                                         <span>登出</span></a></li>
