--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             class="navbar navbar-main navbar-expand-lg text-white  py-lg-2 px-lg-6">
             <div class="container">
                 <a class="navbar-brand @@logo_classes" href="#">
-                    <div class="d-flex align-items-center" onclick="location.href='00_index.html'">
+                    <div class="d-flex align-items-center" onclick="location.href='index.html'">
                         <img class="navbar-brand-dark rotate-logo" src="images/gotcha-logo.png" alt="Logo light">
                     </div>
                 </a>
@@ -130,7 +130,7 @@
                             <a href="01_message.html" class="nav-link" >我的主頁</a>
                         </li>
                         <li class="nav-item d-lg-none hide" data-toggle="collapse" data-target="#navbar_global">
-                            <a href="00_index.html" class="nav-link" >登出</a>
+                            <a href="index.html" class="nav-link" >登出</a>
                         </li>
                     </ul>
                     
@@ -651,7 +651,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 my-5">
                         <div class="d-flex justify-content-center">
-                            <a class="" style="height: 40;" href="00_index.html">
+                            <a class="" style="height: 40;" href="index.html">
                                 <img src="images/gotcha-logo.png" class="mr-3" alt="Footer logo" width="200">
                             </a>
                         </div>
