--- a/page-contactUs.html
+++ b/page-contactUs.html
@@ -41,7 +41,7 @@
         <nav id="navbar-main"
             class="navbar navbar-main navbar-expand-lg bg-3B5999  text-white headroom py-lg-2 px-lg-6">
             <div class="container"><a class="navbar-brand @@logo_classes" href="#">
-                    <div class="d-flex align-items-center" onclick="location.href='00_index.html'">
+                    <div class="d-flex align-items-center" onclick="location.href='index.html'">
                         <img class="navbar-brand-dark rotate-logo"
                             src="images/gotcha-logo.png" alt="Logo light"> 
                     </div>
@@ -64,12 +64,12 @@
                     </div>
                     <ul class="navbar-nav navbar-nav-hover justify-content-center me_buy">
                         <li class="nav-item ">
-                            <a href="00_index.html#t1" class="nav-link" >
+                            <a href="index.html#t1" class="nav-link" >
                                 <span class="nav-link-inner-text mr-1">點數與獎勵</span> 
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="00_index.html#t2" class="nav-link" >
+                            <a href="index.html#t2" class="nav-link" >
                                 <span class="nav-link-inner-text mr-1">兌換案例</span> 
                             </a>
                         </li>
@@ -86,7 +86,7 @@
                             <a href="01_message.html" class="nav-link" >我的主頁</a>
                         </li>
                         <li class="nav-item d-lg-none " data-toggle="collapse" data-target="#navbar_global">
-                            <a href="00_index.html" class="nav-link" >登出</a>
+                            <a href="index.html" class="nav-link" >登出</a>
                         </li>
                     </ul>
                 </div>
@@ -105,7 +105,7 @@
                         <a href="01_message.html" target="_blank" class="btn btn-outline-white btn-docs animate-up-2">
                             <i class="fa-solid fa-user"></i>
                             我的主頁</a>
-                        <a href="00_index.html" class="btn btn-outline-white btn-docs animate-up-2">
+                        <a href="index.html" class="btn btn-outline-white btn-docs animate-up-2">
                             <i class="fa-solid fa-arrow-right-from-bracket mr-2"></i>
                             登出</a>
                     </div>
@@ -348,7 +348,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 my-5" >
                         <div class="d-flex justify-content-center">
-                            <a class="" style="height: 40;" href="00_index.html">
+                            <a class="" style="height: 40;" href="index.html">
                                 <img src="images/gotcha-logo.png" class="mr-3" alt="Footer logo" width="200">
                             </a>
                         </div>
