--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                             <button type="button" class="hotspot-popover bg-secondary" style="top: 15%; left: 40%;"
                                 data-container="body" data-toggle="popover" title="Traffic Share"
                                 data-content="We track your desktop and mobile keyword rankings from any location and plot your full ranking history on a handy graph."></button>
-                            <img class="shadow-box rounded" src="images/index-img-1.png" alt="">
+                            <img class="shadow-box rounded" src="images/index-img-1.webp" alt="">
                             <!-- <img class="shadow-box rounded" src="https://demo.themesberg.com/rocket/assets/img/saas-platform.png" alt="SaaS preview"> -->
                         </div>
                     </div>
