--- a/01_profile.html
+++ b/01_profile.html
@@ -48,7 +48,7 @@
                 data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         </div>
-        <a class="navbar-brand mr-lg-5" href="../../index.html">
+        <a class="navbar-brand mr-lg-5" href="index.html">
             <img class="navbar-brand-dark" src="images/gotcha-logo.png" alt="Pixel logo">
             <img class="navbar-brand-light" src="../../assets/img/brand/dark.svg" alt="Pixel Logo Dark">
         </a>
