--- a/02_mySurvey.html
+++ b/02_mySurvey.html
@@ -44,7 +44,7 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             </div>
         <a class="navbar-brand mr-lg-5"
-        href="../../index.html">
+        href="index.html">
             <img class="navbar-brand-dark" src="images/gotcha-logo.png"
                 alt="Pixel logo"> 
             <img class="navbar-brand-light" src="../../assets/img/brand/dark.svg"
